# mycdk

./: CMakeLists.txt  README.md
CMake/: LoadCMakeArgs.cmake  ProjectTouchScript.cmake  http-parser.CMakeLists.txt  llhttp-release.CMakeLists.txt
demo/: CMakeLists.txt  main.cpp
libmcl/: CMakeLists.txt  libmcl.pc.cmakein
libmcl/include/: mcl.hpp
libmcl/include/mcl/: applets.h  bytearray.h  curl.h  factory.h  filebuf.h  fstail.h  http.h  lang.h  loopex.h  server.h  stream.h  utils.h  worker.h
libmcl/include/mcl/lang/: config.h
libmcl/src/: applets.c  curl.c  defs.h  filebuf.c  fstail.c  http.c  loopex.c  server.c  stream.c  urlparser.c  utils.c  worker.c
libmcl/test/: run-tests.c  runner.c  test-hello.c  test-list.h
